--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,6 +13,9 @@ main:
   - name: People
     url: people
     weight: 30
+  - name: Projects
+    url: projects
+    weight: 35
   - name: Events
     url: event
     weight: 40
